Ajuste na altura do TableWrapper

--- a/src/styles/Perguntas.module.css
+++ b/src/styles/Perguntas.module.css
@@ -23,7 +23,7 @@
   }
   
   .tablewrapper {
-    height: 600px;
+    height: 60vh;
     border-radius: 8px;
     overflow-y: scroll;
     outline: auto;
